--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 #header {
     display: flex;
     justify-content: space-between;
@@ -34,6 +33,7 @@
     border: none;
     border-radius: 5px;
     margin-top: 5px;
+    margin-left: 5px;
     background-color: yellowgreen;
   }
   
@@ -72,5 +72,10 @@
     border-radius: 2px;
     padding: 5px 10px;
     margin-top: 5px;
+  }
+  
+  p {
+    margin: 0;
+    font-size: 15px;
   }
   
